<resources>
    <string name="app_name">Rakuten Asia Test</string>

    <string name="base_url">https://api.bitbucket.org/2.0/</string>

    <string name="api_error">Unable to retrieve repositories. Please try it again later.</string>
    <string name="avatar">avatar</string>
    <string name="type_label">Type :</string>
    <string name="created_on_label">Created On :</string>
    <string name="next">Next</string>
    <string name="owner_label">Owner :</string>
    <string name="language_label">Language :</string>
    <string name="description_label">Description :</string>
</resources>