<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="2dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Display" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/between_view"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/owner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_view"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            tools:text="Test User" />

        <TextView
            android:id="@+id/type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_view"
            android:text="@string/type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_view"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/type_label"
            app:layout_constraintStart_toEndOf="@id/type_label"
            tools:text="Java" />

        <TextView
            android:id="@+id/created_on_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin"
            android:text="@string/created_on_label"
            app:layout_constraintBaseline_toBaselineOf="@id/type_label"
            app:layout_constraintStart_toEndOf="@id/type" />

        <TextView
            android:id="@+id/created_on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_view"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/type_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/created_on_label"
            tools:text="@tools:sample/date/ddmmyy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>